--- a/Project.html
+++ b/Project.html
@@ -12,9 +12,21 @@
 
 </head>
 <body>
-    <div>
-        <h1>Welcome to new Project</h1>
+        <section class="flex-container">
+            <div class="flot-left">
+                <h1>Welcome to new Project</h1>
+                <h3>Live A Beautiful Life</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    At cumque veritatis accusamus eaque ut laudantium, eum 
+                    officiis? Eum, sequi saepe.Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    At cumque veritatis accusamus eaque ut laudantium, eum 
+                    officiis? Eum, sequi saepe.</p>
+            </div>
+            <div class="flot-right">
+                <img src="img/My logo.png" alt="sulaiman">
+            </div>
+        </section>
         
-    </div>
+
 </body>
 </html>
