Btn design done

--- a/Project.html
+++ b/Project.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-        <section class="flex-container">
+        <section class="container">
             <div class="flot-left">
                 <h1>Welcome to new Project</h1>
                 <h3>Live A Beautiful Life</h3>
@@ -21,6 +21,7 @@
                     officiis? Eum, sequi saepe.Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     At cumque veritatis accusamus eaque ut laudantium, eum 
                     officiis? Eum, sequi saepe.</p>
+                    <a class="link-button" href="www.google.com" target="_blank">Hire Me</a>
             </div>
             <div class="flot-right">
                 <img src="img/My logo.png" alt="sulaiman">
