--- a/Project.html
+++ b/Project.html
@@ -12,15 +12,17 @@
 
 </head>
 <body>
-        <section class="container">
+        <section class="topimg">
             <div class="flot-left">
                 <h1>Welcome to new Project</h1>
                 <h3>Live A Beautiful Life</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    At cumque veritatis accusamus eaque ut laudantium, eum 
-                    officiis? Eum, sequi saepe.Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    At cumque veritatis accusamus eaque ut laudantium, eum 
-                    officiis? Eum, sequi saepe.</p>
+                <p>Life is beautiful! And even more so if you are living a life filled with happiness, peace and contribution.      
+                     However, many people, including myself, have lived a life full of possessions, with a soul full of hatred, a 
+                      job that sucks the very life out of them, and an emptiness inside.
+
+                    Even with its struggles and difficulties life can be beautiful,depending what you focus on. A beautiful life is 
+                     one that makesyou feel fully alive, is full of inspiration and creates adeeper, more connected environment for 
+                      us to live in. With thisin mind I’ve come up with a few steps on how to live a beautiful life.</p>
                     <a class="link-button" href="https://www.facebook.com/mdsulaiman189" target="_blank">Hire Me</a>
             </div>
             <div class="flot-right">
