--- a/Project.html
+++ b/Project.html
@@ -14,19 +14,33 @@
 <body>
         <section class="topimg">
             <div class="flot-left">
-                <h1>Welcome to new Project</h1>
+                <h1>Welcome to our new Project!</h1>
                 <h3>Live A Beautiful Life</h3>
                 <p>Life is beautiful! And even more so if you are living a life filled with happiness, peace and contribution.      
                      However, many people, including myself, have lived a life full of possessions, with a soul full of hatred, a 
-                      job that sucks the very life out of them, and an emptiness inside.
+                      job that sucks the very life out of them, and an emptiness inside. <br> <br>
 
                     Even with its struggles and difficulties life can be beautiful,depending what you focus on. A beautiful life is 
                      one that makesyou feel fully alive, is full of inspiration and creates adeeper, more connected environment for 
                       us to live in. With thisin mind I’ve come up with a few steps on how to live a beautiful life.</p>
                     <a class="link-button" href="https://www.facebook.com/mdsulaiman189" target="_blank">Hire Me</a>
             </div>
-            <div class="flot-right">
-                <img src="img/My logo.png" alt="sulaiman">
+            <div class="section-img">
+                <img src="img/My logo.png" width="100%" alt="sulaiman">
+            </div>
+        </section>
+
+        <section class="bg-img">
+            <div class="section-img">
+                <img src="img/sulaiman22.png" width="120%" alt="sulaiman">
+            </div>
+            <div class="flot-left">
+                <h1>We Developing your position</h1>
+                <h3>it's big project for you!</h3>
+                <p>Hey, This is a big dream project for you and your place. we have launched a big project for you to earn more    
+                 money from here, feel free to contact us and if you have any question, then direct message with this
+                <a class="contact-btn" target="_blank" href="mailto:yamimahmed189@gmail.com">Gmail</a></p>
+                <a class="link-button" href="https://www.facebook.com/mdsulaiman189" >Contact me in Facebook</a>
             </div>
         </section>
         
