2nd section added

--- a/Project.html
+++ b/Project.html
@@ -12,8 +12,8 @@
 
 </head>
 <body>
-        <section class="topimg">
-            <div class="flot-left">
+        <section class="flexible-container topimg">
+            <div class="half-width">
                 <h1>Welcome to our new Project!</h1>
                 <h3>Live A Beautiful Life</h3>
                 <p>Life is beautiful! And even more so if you are living a life filled with happiness, peace and contribution.      
@@ -30,17 +30,37 @@
             </div>
         </section>
 
-        <section class="bg-img">
+        <section class="flexible-container bg-img">
             <div class="section-img">
                 <img src="img/sulaiman22.png" width="120%" alt="sulaiman">
             </div>
-            <div class="flot-left">
+            <div class="half-width">
                 <h1>We Developing your position</h1>
                 <h3>it's big project for you!</h3>
-                <p>Hey, This is a big dream project for you and your place. we have launched a big project for you to earn more    
-                 money from here, feel free to contact us and if you have any question, then direct message with this
+                <p>Hey, This is a big dream project for you and     
+                 your place. we have launched a big project for 
+                  you to earn more    
+                 money from here, feel free to contact us and if 
+                  you have any question, then direct message with 
+                   this
                 <a class="contact-btn" target="_blank" href="mailto:yamimahmed189@gmail.com">Gmail</a></p>
                 <a class="link-button" href="https://www.facebook.com/mdsulaiman189" >Contact me in Facebook</a>
+            </div>
+        </section>
+
+        <section>
+            <h3>Experiences </h3>
+            <div class="flexible-container experience-area">
+                <div class="half-width">
+                    <h1>Hello HTML Small World</h1>
+                    <h3>We love to use HTML Code</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime minima voluptas et sapiente quod distinctio harum aliquam vel voluptatem beatae!</p>
+                </div>
+                <div class="half-width">
+                    <h1>Hello HTML Small World</h1>
+                    <h3>We love to use HTML Code</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime minima voluptas et sapiente quod distinctio harum aliquam vel voluptatem beatae!</p>
+                </div>
             </div>
         </section>
         
