--- a/Project.html
+++ b/Project.html
@@ -48,21 +48,27 @@
             </div>
         </section>
 
-        <section>
+        <section class="experience-area">
             <h3>Experiences </h3>
-            <div class="flexible-container experience-area">
-                <div class="half-width">
-                    <h1>Hello HTML Small World</h1>
-                    <h3>We love to use HTML Code</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime minima voluptas et sapiente quod distinctio harum aliquam vel voluptatem beatae!</p>
+            <div class="flexible-container ">
+                <div class="experience-item border-left">
+                    <h2>Digital Marketer</h2>
+                    <h3>We love to grow up your Business</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime minima voluptas et sapiente quod distinctio 
+                         harum aliquam vel voluptatem beatae!</p>
                 </div>
-                <div class="half-width">
-                    <h1>Hello HTML Small World</h1>
-                    <h3>We love to use HTML Code</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime minima voluptas et sapiente quod distinctio harum aliquam vel voluptatem beatae!</p>
+                <div class="experience-item border-right">
+                    <h2>SEO expert</h2>
+                    <h3>we are ready to rank your website</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime minima voluptas et sapiente quod distinctio 
+                         harum aliquam vel voluptatem beatae!</p>
                 </div>
             </div>
         </section>
+
+        <footer>
+            <p class="footerr">This Simple Design made by Sulaiman </p>
+        </footer>
         
 
 </body>
